--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <i class="fas fa-map-marker-alt fa-lg"></i>
                 <input id="search" type="search" placeholder="Marseille, France">
                 <input id="sub" type="submit" value="Rechercher">
+                
+                
             </div>    
             </form>    
             <div class="AllFilter">
@@ -64,14 +66,14 @@
                             <div class="Cardpicthéb">
                              <img src="../images/Hébergements/marcus-loke-WQJvWU_HZFo-unsplash.jpg" title="Auberge la Cannebiere" alt="Auberge la Cannebiere">
                             </div>
-                            <div class="Carddesc">
+                            <div class="Carddesc">                               
                                 <h3>Auberge la Cannebiere</h3>
-                                <p>Nuit à partir de<strong>25€</strong></p>
+                                <p>Nuit à partir de <strong>25€</strong></p>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>                        
-                                <i class=""></i>
+                                <i class="fa-solid fa-star"></i>                                                       
+                                <i class="fa-solid fa-star grey"></i>
                             </div>                                                                                           
                         </div>
                         <div class="CardHéb boxshadow">
@@ -80,7 +82,7 @@
                             </div>
                             <div class="Carddesc">
                                 <h3>Hôtel du port</h3>
-                                <p>Nuit à partir de<strong>52€</strong></p>              
+                                <p>Nuit à partir de <strong>52€</strong></p>              
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -94,12 +96,12 @@
                             </div>
                             <div class="Carddesc">
                                 <h3>Hôtel Les mouettes</h3>
-                                <p>Nuit à partir de<strong>76€</strong></p>
+                                <p>Nuit à partir de <strong>76€</strong></p>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
+                                <i class="fa-solid fa-star grey"></i>
                             </div>    
                         </div>
                         <div class="CardHéb boxshadow">
@@ -108,12 +110,12 @@
                             </div>
                             <div class="Carddesc">
                                 <h3>Hôtel de la mer</h3>
-                                <p>Nuit à partir de<strong>46€</strong></p>
+                                <p>Nuit à partir de <strong>46€</strong></p>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>                               
+                                <i class="fa-solid fa-star grey"></i>
+                                <i class="fa-solid fa-star grey"></i>                               
                             </div>    
                         </div>
                         <div class="CardHéb boxshadow">
@@ -122,12 +124,12 @@
                             </div>
                             <div class="Carddesc">
                                 <h3>Auberge Le panier</h3>
-                                <p>Nuit à partir de<strong>23€</strong></p>
+                                <p>Nuit à partir de <strong>23€</strong></p>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
-                                <i class="fa-solid fa-star"></i>                               
+                                <i class="fa-solid fa-star grey"></i>                               
                             </div>    
                         </div>
                         <div class="CardHéb boxshadow">
@@ -136,7 +138,7 @@
                             </div>
                             <div class="Carddesc">
                                 <h3>Hôtel chez Amina</h3>
-                                <p>Nuit à partir de<strong>96€</strong></p>
+                                <p>Nuit à partir de <strong>96€</strong></p>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
                                 <i class="fa-solid fa-star"></i>
@@ -161,31 +163,34 @@
                                 <img src="../images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" title="Hôtel Le soleil du matin" alt="Hôtel Le soleil du matin">
                             </div>
                             <div class="Carddescpop">
-                                <h3>Hôtel Le soleil du matin</h3>
-                                <p>Nuit à partir de<strong>128€</strong></p>
+                                <div class="descpop">
+                                    <h3>Hôtel Le soleil du matin</h3>
+                                    <p>Nuit à partir de <strong>128€</strong></p>
+                                </div>    
                                 <div class="icopop">
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i>                             
+                                    <i class="fa-solid fa-star grey"></i>                             
                                 </div>                                   
                             </div>    
                         </div>
-                        <div class="Cardpop">
+                        <div class="Cardpop boxshadow">
                             <div class="Cardpictpop">
                                 <img src="../images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" title="Chambres d'hôtes" alt="Chambres d'hôtes">
                             </div>
                             <div class="Carddescpop">
-                                <h3>Au coeur de l'eau</br>
-                                Chambres d'hôtes</h3>
-                                <p>Nuit à partir de<strong>71€</strong></p>                         
+                                <div class="descpop">
+                                    <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                                    <p>Nuit à partir de <strong>71€</strong></p>
+                                </div>                             
                                 <div class="icopop">
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
-                                    <i class="fa-solid fa-star"></i> 
+                                    <i class="fa-solid fa-star grey"></i> 
                                 </div>                         
                             </div>    
                         </div>
@@ -194,8 +199,10 @@
                                 <img src="../images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" title="Hôtel Tout bleu et Blanc" alt="Hôtel Tout bleu et Blance">
                             </div>
                             <div class="Carddescpop">
-                                <h3>Hôtel Tout bleu et Blanc</h3>
-                                <p>Nuit à partir de<strong>68€</strong></p>
+                                <div class="descpop">
+                                    <h3>Hôtel Tout bleu et Blanc</h3>
+                                    <p>Nuit à partir de <strong>68€</strong></p>
+                                </div>    
                                 <div class="icopop">                          
                                     <i class="fa-solid fa-star"></i>
                                     <i class="fa-solid fa-star"></i>
