--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <i class="fas fa-map-marker-alt fa-lg"></i>
                 <input id="search" type="search" placeholder="Marseille, France">
                 <input id="sub" type="submit" value="Rechercher">
-                
+                <i class="fa-solid fa-magnifying-glass dnone"></i>
                 
             </div>    
             </form>    
@@ -158,10 +158,8 @@
                         <i class="fa-solid fa-star"></i>            
                     </div>
                     <div class="allcardpop">
-                        <div class="Cardpop boxshadow">
-                            <div class="Cardpictpop">
-                                <img src="../images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" title="Hôtel Le soleil du matin" alt="Hôtel Le soleil du matin">
-                            </div>
+                        <div class="Cardpop boxshadow">                          
+                            <img src="../images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" title="Hôtel Le soleil du matin" alt="Hôtel Le soleil du matin">                          
                             <div class="Carddescpop">
                                 <div class="descpop">
                                     <h3>Hôtel Le soleil du matin</h3>
@@ -176,13 +174,12 @@
                                 </div>                                   
                             </div>    
                         </div>
-                        <div class="Cardpop boxshadow">
-                            <div class="Cardpictpop">
-                                <img src="../images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" title="Chambres d'hôtes" alt="Chambres d'hôtes">
-                            </div>
+                        <div class="Cardpop boxshadow">                          
+                            <img src="../images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" title="Chambres d'hôtes" alt="Chambres d'hôtes">                          
                             <div class="Carddescpop">
                                 <div class="descpop">
-                                    <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                                    <h3>Au coeur de l'eau</h3>
+                                    <h3>Chambres d'hôtes</h3>
                                     <p>Nuit à partir de <strong>71€</strong></p>
                                 </div>                             
                                 <div class="icopop">
@@ -194,10 +191,8 @@
                                 </div>                         
                             </div>    
                         </div>
-                        <div class="Cardpop boxshadow">
-                            <div class="Cardpictpop">
-                                <img src="../images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" title="Hôtel Tout bleu et Blanc" alt="Hôtel Tout bleu et Blance">
-                            </div>
+                        <div class="Cardpop boxshadow">                           
+                                <img src="../images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" title="Hôtel Tout bleu et Blanc" alt="Hôtel Tout bleu et Blance">                            
                             <div class="Carddescpop">
                                 <div class="descpop">
                                     <h3>Hôtel Tout bleu et Blanc</h3>
