finition bloc activites et mq

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         <script src="https://kit.fontawesome.com/5494c65830.js" crossorigin="anonymous"></script>
         <title>Booki</title>
     </head>
-
     <body>
         <header>
             <img id="logo" src="images/Booki.png" alt="Booki logo">
@@ -30,8 +29,7 @@
                 <i class="fas fa-map-marker-alt fa-lg"></i>
                 <input id="search" type="search" placeholder="Marseille, France">
                 <input id="sub" type="submit" value="Rechercher">
-                <i class="fa-solid fa-magnifying-glass dnone"></i>
-                
+                <i class="fa-solid fa-magnifying-glass dnone"></i>                
             </div>    
             </form>    
             <div class="AllFilter">
@@ -60,7 +58,7 @@
             </section> 
             <div class="HébMarspop">
                 <div class="hébmars">
-                    <h2 id="Hébergements">Hébergements a Marseille</h2>
+                    <h2 id="Hébergements">Hébergements à Marseille</h2>
                     <div class="Flexfilterhéb">
                         <div class="CardHéb boxshadow">
                             <div class="Cardpicthéb">
@@ -213,7 +211,7 @@
             <article>
                 <h2 id="Activités">Activités a Marseille</h2>
                 <div class="Allactmars">
-                    <div class="Cardact boxshadow">
+                    <div class="Cardact boxshadow ">
                         <div class="Cardpictact1and4">
                             <img src="../images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" title="Vieux Port" alt="Vieux Port">
                         </div>
@@ -235,7 +233,7 @@
                                 <img src="../images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" title="Iles de Frioul" alt="Iles de Frioul">
                             </div>
                             <div class="Carddescact">
-                                <h3>Iles de Frioul</h3>
+                                <h3>Îles de Frioul</h3>
                             </div>
                         </div>
                     </div>    
