--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <div class="Flexfilterhéb">
                         <div class="CardHéb boxshadow">
                             <div class="Cardpicthéb">
-                             <img src="../images/Hébergements/marcus-loke-WQJvWU_HZFo-unsplash.jpg" title="Auberge la Cannebiere" alt="Auberge la Cannebiere">
+                             <img src="./images/Hébergements/marcus-loke-WQJvWU_HZFo-unsplash.jpg" title="Auberge la Cannebiere" alt="Auberge la Cannebiere">
                             </div>
                             <div class="Carddesc">                               
                                 <h3>Auberge la Cannebiere</h3>
@@ -76,7 +76,7 @@
                         </div>
                         <div class="CardHéb boxshadow">
                             <div class="Cardpicthéb">
-                             <img src="../images/Hébergements/fred-kleber-gTbaxaVLvsg-unsplash.jpg" title="Hôtel du port" alt="Hôtel du port">
+                             <img src="./images/Hébergements/fred-kleber-gTbaxaVLvsg-unsplash.jpg" title="Hôtel du port" alt="Hôtel du port">
                             </div>
                             <div class="Carddesc">
                                 <h3>Hôtel du port</h3>
@@ -90,7 +90,7 @@
                         </div>
                         <div class="CardHéb boxshadow">
                             <div class="Cardpicthéb">
-                             <img src="../images/Hébergements/reisetopia-B8WIgxA_PFU-unsplash.jpg" title="Hôtel Les mouettes" alt="Hôtel Les mouettes">
+                             <img src="./images/Hébergements/reisetopia-B8WIgxA_PFU-unsplash.jpg" title="Hôtel Les mouettes" alt="Hôtel Les mouettes">
                             </div>
                             <div class="Carddesc">
                                 <h3>Hôtel Les mouettes</h3>
@@ -104,7 +104,7 @@
                         </div>
                         <div class="CardHéb boxshadow">
                             <div class="Cardpicthéb">
-                             <img src="../images/Hébergements/annie-spratt-Eg1qcIitAuA-unsplash.jpg" title="Hôtel de la mer" alt="Hôtel de la mer">
+                             <img src="./images/Hébergements/annie-spratt-Eg1qcIitAuA-unsplash.jpg" title="Hôtel de la mer" alt="Hôtel de la mer">
                             </div>
                             <div class="Carddesc">
                                 <h3>Hôtel de la mer</h3>
@@ -118,7 +118,7 @@
                         </div>
                         <div class="CardHéb boxshadow">
                             <div class="Cardpicthéb">
-                                <img src="../images/Hébergements/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" title="Auberge Le panier" alt="Auberge Le panier">
+                                <img src="./images/Hébergements/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" title="Auberge Le panier" alt="Auberge Le panier">
                             </div>
                             <div class="Carddesc">
                                 <h3>Auberge Le panier</h3>
@@ -132,7 +132,7 @@
                         </div>
                         <div class="CardHéb boxshadow">
                             <div class="Cardpicthéb">
-                                <img src="../images/Hébergements/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" title="Hôtel chez Amina" alt="Hôtel chez Aminae">
+                                <img src="./images/Hébergements/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" title="Hôtel chez Amina" alt="Hôtel chez Aminae">
                             </div>
                             <div class="Carddesc">
                                 <h3>Hôtel chez Amina</h3>
@@ -157,10 +157,10 @@
                     </div>
                     <div class="allcardpop">
                         <div class="Cardpop boxshadow">                          
-                            <img src="../images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" title="Hôtel Le soleil du matin" alt="Hôtel Le soleil du matin">                          
+                            <img src="./images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" title="Hôtel Le soleil du matin" alt="Hôtel Le soleil du matin">                          
                             <div class="Carddescpop">
                                 <div class="descpop">
-                                    <h3>Hôtel Le soleil du matin</h3>
+                                    <h3 class="margb">Hôtel Le soleil du matin</h3>
                                     <p>Nuit à partir de <strong>128€</strong></p>
                                 </div>    
                                 <div class="icopop">
@@ -173,11 +173,11 @@
                             </div>    
                         </div>
                         <div class="Cardpop boxshadow">                          
-                            <img src="../images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" title="Chambres d'hôtes" alt="Chambres d'hôtes">                          
+                            <img src="./images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" title="Chambres d'hôtes" alt="Chambres d'hôtes">                          
                             <div class="Carddescpop">
                                 <div class="descpop">
                                     <h3>Au coeur de l'eau</h3>
-                                    <h3>Chambres d'hôtes</h3>
+                                    <h3 class="margb">Chambres d'hôtes</h3>
                                     <p>Nuit à partir de <strong>71€</strong></p>
                                 </div>                             
                                 <div class="icopop">
@@ -190,10 +190,10 @@
                             </div>    
                         </div>
                         <div class="Cardpop boxshadow">                           
-                                <img src="../images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" title="Hôtel Tout bleu et Blanc" alt="Hôtel Tout bleu et Blance">                            
+                                <img src="./images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" title="Hôtel Tout bleu et Blanc" alt="Hôtel Tout bleu et Blance">                            
                             <div class="Carddescpop">
                                 <div class="descpop">
-                                    <h3>Hôtel Tout bleu et Blanc</h3>
+                                    <h3 class="margb">Hôtel Tout bleu et Blanc</h3>
                                     <p>Nuit à partir de <strong>68€</strong></p>
                                 </div>    
                                 <div class="icopop">                          
@@ -213,7 +213,7 @@
                 <div class="Allactmars">
                     <div class="Cardact boxshadow ">
                         <div class="Cardpictact1and4">
-                            <img src="../images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" title="Vieux Port" alt="Vieux Port">
+                            <img src="./images/activites/3_medium/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" title="Vieux Port" alt="Vieux Port">
                         </div>
                         <div class="Carddescact">
                             <h3>Vieux Port</h3>
@@ -222,7 +222,7 @@
                     <div class="cardcolumn">
                         <div class="Cardact boxshadow">
                             <div class="Cardpictact2">
-                                <img src="../images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" title="Fort de Pomègues" alt="Fort de Pomègues">
+                                <img src="./images/activites/3_medium/paul-hermann-QFTrLdQIRhI-unsplash.jpg" title="Fort de Pomègues" alt="Fort de Pomègues">
                             </div>
                             <div class="Carddescact">
                                 <h3>Fort de Pomègues</h3>
@@ -230,7 +230,7 @@
                         </div>                             
                         <div class="Cardact boxshadow">
                             <div class="Cardpictact3">
-                                <img src="../images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" title="Iles de Frioul" alt="Iles de Frioul">
+                                <img src="./images/activites/3_medium/kevin-hikari-rV_Qd1l-VXg-unsplash.jpg" title="Iles de Frioul" alt="Iles de Frioul">
                             </div>
                             <div class="Carddescact">
                                 <h3>Îles de Frioul</h3>
@@ -239,7 +239,7 @@
                     </div>    
                     <div class="Cardact boxshadow">
                         <div class="Cardpictact1and4">
-                            <img src="../images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" title="Parc National des Calanques" alt="Parc National des Calanques">
+                            <img src="./images/activites/3_medium/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" title="Parc National des Calanques" alt="Parc National des Calanques">
                         </div>
                         <div class="Carddescact">
                             <h3>Parc National des Calanques</h3>
@@ -248,7 +248,7 @@
                     <div class="cardcolumn"> 
                         <div class="Cardact boxshadow">
                             <div class="Cardpictact5">
-                                <img src="../images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" title="Notre-Dame-de-la-Garde" alt="Notre-Dame-de-la-Garde">
+                                <img src="./images/activites/3_medium/florian-wehde-xW9e8gdotxI-unsplash.jpg" title="Notre-Dame-de-la-Garde" alt="Notre-Dame-de-la-Garde">
                             </div>
                             <div class="Carddescact">
                                 <h3>Notre-Dame-de-la-Garde</h3>
@@ -256,7 +256,7 @@
                         </div>    
                         <div class="Cardact boxshadow ">
                             <div class="Cardpictact6">
-                                <img src="../images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" title="Parc Longchamp" alt="Parc Longchamp">
+                                <img src="./images/activites/3_medium/lena-paulin-wH2-EJoDcV0-unsplash.jpg" title="Parc Longchamp" alt="Parc Longchamp">
                             </div>
                             <div class="Carddescact">
                                 <h3>Parc Longchamp</h3>
