--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width initial-scale=1.0">
-        <meta name="Description" content="Avec Booki trouvez votre Hébergement pour des vancances de rêves, en plain centre ville ou en pleine nature."> 
+        <meta name="Description" content="Avec Booki trouvez votre Hébergement pour des vancances de rêves, en plein centre ville ou en pleine nature."> 
         <link rel="stylesheet" type="text/css" href="css/normalize.css"> 
         <link rel="stylesheet" type="text/css" href="css/style.css">
         <script src="https://kit.fontawesome.com/5494c65830.js" crossorigin="anonymous"></script>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="allcardpop">
                         <div class="Cardpop boxshadow">                          
-                            <img src="./images/hebergements/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" title="Hôtel Le soleil du matin" alt="Hôtel Le soleil du matin">                          
+                            <img src="./images/Mostpop/3_medium/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" title="Hôtel Le soleil du matin" alt="Hôtel Le soleil du matin">                          
                             <div class="Carddescpop">
                                 <div class="descpop">
                                     <h3 class="margb">Hôtel Le soleil du matin</h3>
@@ -173,7 +173,7 @@
                             </div>    
                         </div>
                         <div class="Cardpop boxshadow">                          
-                            <img src="./images/hebergements/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" title="Chambres d'hôtes" alt="Chambres d'hôtes">                          
+                            <img src="./images/Mostpop/3_medium/aw-creative-VGs8z60yT2c-unsplash.jpg" title="Chambres d'hôtes" alt="Chambres d'hôtes">                          
                             <div class="Carddescpop">
                                 <div class="descpop">
                                     <h3>Au coeur de l'eau</h3>
@@ -190,7 +190,7 @@
                             </div>    
                         </div>
                         <div class="Cardpop boxshadow">                           
-                                <img src="./images/hebergements/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" title="Hôtel Tout bleu et Blanc" alt="Hôtel Tout bleu et Blance">                            
+                                <img src="./images/Mostpop/3_medium/febrian-zakaria-sjvU0THccQA-unsplash.jpg" title="Hôtel Tout bleu et Blanc" alt="Hôtel Tout bleu et Blance">                            
                             <div class="Carddescpop">
                                 <div class="descpop">
                                     <h3 class="margb">Hôtel Tout bleu et Blanc</h3>
